# zkevm-circuits

./: Cargo.toml  Makefile  README.md  go.work.sum  rust-toolchain  typos.toml
aggregator/: Cargo.toml  README.md
aggregator/data/test_blobs/: blob001.hex  blob002.hex  blob003.hex  blob004.hex
aggregator/data/test_blobs/multi/: 202708.hex  202709.hex  202710.hex  202711.hex  202712.hex
aggregator/src/: aggregation.rs  batch.rs  blob.rs  chunk.rs  constants.rs  core.rs  lib.rs  param.rs  tests.rs  util.rs
aggregator/src/aggregation/: barycentric.rs  batch_data.rs  blob_data.rs  circuit.rs  config.rs  decoder.rs  util.rs
aggregator/src/aggregation/decoder/: seq_exec.rs  tables.rs  witgen.rs
aggregator/src/aggregation/decoder/tables/: bitstring.rs  fixed.rs  fse.rs  literals_header.rs  seqinst_table.rs
aggregator/src/aggregation/decoder/tables/fixed/: fse_table_transition.rs  predefined_fse.rs  seq_code_to_value.rs  seq_data_interleaved_order.rs  seq_tag_order.rs  tag_transition.rs  variable_bit_packing.rs
aggregator/src/aggregation/decoder/witgen/: params.rs  types.rs  util.rs
aggregator/src/aggregation/rlc/: config.rs  gates.rs
aggregator/src/tests/: aggregation.rs  blob.rs  compression.rs  mock_chunk.rs
aggregator/src/tests/rlc/: dynamic_hashes.rs  gates.rs
bus-mapping/: Cargo.toml  README.md
docs/: EVM_Circuit.md  MCOPY.md  MPT_Circuit.md  Tx_Circuit.md
eth-types/: Cargo.toml
gadgets/: Cargo.toml
integration-tests/: Cargo.toml
prover/: Cargo.toml
testool/: Config.toml  README.md  codehash.txt
zkevm-circuits/: Cargo.toml
(+287 files in other folders)
