[package]
name = "aggregator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

eth-types = { path = "../eth-types" }
gadgets = { path = "../gadgets" }
zkevm-circuits = { path = "../zkevm-circuits", default-features=false, features = ["debug-annotations", "parallel_syn"] }

ark-std.workspace = true
ctor.workspace = true
env_logger.workspace = true
ethers-core.workspace = true
hex.workspace = true
log.workspace = true
itertools.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
halo2-base.workspace = true
halo2-ecc.workspace = true
halo2_proofs.workspace = true
snark-verifier.workspace = true
snark-verifier-sdk.workspace = true
strum.workspace = true
strum_macros.workspace = true

# da-4844
revm-precompile.workspace = true
revm-primitives.workspace = true
c-kzg.workspace = true
num-bigint.workspace = true

# da-compression
bitstream-io = "2.2.0"
zstd-encoder = { package = "encoder", git = "https://github.com/scroll-tech/da-codec.git", tag = "v0.1.0" }

[dev-dependencies]

csv = "1.1"

[features]
default = ["revm-precompile/c-kzg"]
print-trace = ["ark-std/print-trace"]
# This feature is useful for unit tests where we check the SAT of pi aggregation circuit
disable_proof_aggregation = []
